--- a/index.html
+++ b/index.html
@@ -1,69 +1,11 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cuatro Hojas</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        .container {
-            text-align: center;
-            margin-top: 50px;
-        }
-
-        .logo {
-            max-width: 100px;
-        }
-
-        .address-box {
-            background-color: #4CAF50;
-            color: #fff;
-            padding: 10px;
-            margin-top: 20px;
-        }
-
-        .second-logo {
-            max-width: 150px;
-            margin-top: 20px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Redirection</title>
+  <meta http-equiv="refresh" content="0; url=CONCHA.pdf">
 </head>
 <body>
-
-    <div class="container">
-        <img src="Picture45.png" alt="Logo Empresa 1" class="logo">
-        <div class="address-box">
-            <p>Sucursal: AVENIDA DEL BOSQUE # 1189 PARQUE INDUSTRIAL EL BOSQUE II TLAQUEPAQUE, JAL. CP 45590
-Sucursal: ANTONIO MADRAZO: Blvd. Antonio Madrazo 217-A Las Trojes León, Guanajuato CP  37227 Tel.  477 7167 681
-Sucursal ABASTOS:  Jalisco Calle 1 Bloque A Bodega 113-115 CP 44530 Guadalajara Jal. Tel 33 3671 3082
-Sucursal ABEJA: Jalisco Calle Abeja #1114 Col. Jardines de la Victoria CP 44530 Guadalajara Jal Tel. 33 3671 2106
-Sucursal CONSTITUCIÓN: Jalisco   Av. Venustiano Carranza #729 Col. Constitución CP 45180 Zapopan, Jalisco Tel. 33 3656 7308
-Sucursal CORONA: Jalisco Calle Zaragoza #138 Col. Centro CP 44100 Guadalajara Jal. Tel. 33 3613 5613
-Sucursal COUNTRY: Jalisco Prol. E. Díaz de León #2273 Local 4 Col. Jardines del Country CP 44210 Guadalajara Jal. Tel. 33 3854 5314
-Sucursal FEDERACIÓN:  Jalisco Calle Federación # 2329 Col. Blanco y Cuéllar CP 44730 Guadalajara Jal. Tel. 33 3665 7832
-Sucursal SANTA MARGARITA: Jalisco Prol. Acueducto # 1029 Col. Girasoles Elite CP 45138 Guadalajara, Jal. Tel. 33 3685 6610
-Sucursal TONALA: Jalisco Calle Hidalgo # 160 Col. Tonalá Centro CP 45400 Tonalá Jal.  Tel. 33 3792 6904
-Sucursal SANTA FE: Jalisco Av. Concepción #20 Col. Centro Tlajomulco de Zúñiga, Jalisco. Tel. 33 3600 6782
-Sucursal OBLATOS: Jalisco Calle Hacienda Ojo Zarco 1442 Col. Oblatos Guadalajara Jalisco Tel. 33 1001 7032
-Sucursal SANTA TERE: Jalisco Calle Andrés Terán 430 Col Santa Teresita, Guadalajara Jal.  Tel. 33 1001 4608
-Sucursal TLAQUEPAQUE: Jalisco Calle Álvaro Obregón 18a Col. Tlaquepaque Centro Tlaquepaque, Jal.  Tel. 33 1001 0961
-Sucursal ZAPOPAN: Jalisco Calle Ramón Corona 49 Col. Zapopan Centro, Zapopan, Jal Tel. 33 1578 6917
-Sucursal ALEMAN: Guanajuato   Av. Miguel Alemán #140 Local 5 y 6 Col. Centro CP 37000 León Gto.  Tel. 477 713 2005
-Sucursal DELTA: Guanajuato Blvd. Delta # 926 Col. Valle Delta CP 37530 León Gto. Tel. 447 167 5149
-Sucursal SAN JUAN BOSCO: Guanajuato Blvd. San Juan Bosco # 2301 Col. Ejido la Loya CP 37408 León, Gto. Tel. 447 197 0072
-Sucursal ABASTOS LEÓN: Guanajuato Blvd. Hermanos Aldama 4102 Local H18 Central de Abastos, León, Gto.
-Sucursal AGUASCALIENTES: Aguascalientes Ave. Comercio #12 Centro Comercial El Agropecuario CP 20135 Aguascalientes, Ags. Tel. 449 153 0132
-Sucursal GÁLVEZ: San Luis Potosí Av. José de Gálvez 245-A Col. Central de Abastos CP 78390 San Luis Potosí, S.L.P. Tel. 444 821 3845 
-Sucursal CENTRO: San Luis Potosí Calle Miguel Hidalgo 660 Centro Histórico, San Luis Potosí, SLP Tel. 444 100 5516
-</p>
-        </div>
-        <img src="Bolsa 1 kg Pilsac.png" alt="Logo Empresa 2" class="second-logo">
-    </div>
-
+  <p>Si no eres redirigido automáticamente, haz clic <a href="CONCHA.pdf">aquí</a>.</p>
 </body>
 </html>
